--- a/client/index.html
+++ b/client/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style.css" />
-    <script src="./main.js"></script>
-    <title>러닝! ECMAScript</title>
+    <script src="./chapter/core/01.coreStructure.js"></script>
+    <title>javascript core</title>
   </head>
   <body>
     <h1>
