--- a/client/index.html
+++ b/client/index.html
@@ -5,7 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style.css" />
-    <script defer src="./chapter/core/19.tryCatch.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js"></script> -->
+
+    <!-- <script src="./lib/dom/typeOf.js"></script> -->
+    <script src="./chapter/lib/dom/getNode.js"></script>
+    <script src="./chapter/lib/error/typeError.js"></script>
+    <script src="./chapter/lib/dom/attr.js"></script>
+    <script src="./chapter/lib/dom/insert.js"></script>
+    <script src="./chapter/lib/dom/css.js"></script>
+
+    <script defer src="./chapter/dom/06.event.js"></script>
     <title>javascript core</title>
   </head>
   <body>
@@ -13,5 +22,16 @@
       <span class="first">hello</span>
       <span class="second">world</span>
     </h1>
+
+    <!-- <div class="ground">
+      <img class="ball" src="https://en.js.cx/clipart/ball.svg" alt="축구공" />
+    </div> -->
+
+    <section class="visual">
+      <div class="pop"></div>
+      <article class="news">
+        <p class="desc">Lorem ipsum dolor sit amet</p>
+      </article>
+    </section>
   </body>
 </html>
